--- a/PDW.vcxproj.filters
+++ b/PDW.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="toolbar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utils\messagequeue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Rsrc.rc">
@@ -155,6 +158,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Headers\toolbar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utils\messagequeue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
